--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
   "keywords": [],
   "license": "ISC",
   "dependencies": {
-    "ioredis": "^4.22.0"
+    "ioredis": "^4.22.0",
+    "lodash.isplainobject": "^4.0.6"
   },
   "devDependencies": {
     "@luckbox/eslint-rules": "4.0.4",
     "@types/ioredis": "^4.19.3",
     "@types/jest": "^26.0.3",
+    "@types/lodash.isplainobject": "^4.0.6",
     "@types/node": "^14.0.14",
     "@typescript-eslint/eslint-plugin": "^4.0.0",
     "@typescript-eslint/parser": "^4.0.0",
