--- a/package.json
+++ b/package.json
@@ -34,13 +34,15 @@
   "license": "ISC",
   "dependencies": {
     "ioredis": "^4.22.0",
-    "lodash.isplainobject": "^4.0.6"
+    "lodash.isplainobject": "^4.0.6",
+    "lodash.omit": "^4.5.0"
   },
   "devDependencies": {
     "@luckbox/eslint-rules": "4.0.4",
     "@types/ioredis": "^4.19.3",
     "@types/jest": "^26.0.3",
     "@types/lodash.isplainobject": "^4.0.6",
+    "@types/lodash.omit": "^4.5.6",
     "@types/node": "^14.0.14",
     "@typescript-eslint/eslint-plugin": "^4.0.0",
     "@typescript-eslint/parser": "^4.0.0",
