--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@luckbox/ipc-messenger",
   "author": "Luckbox",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "Client for ipc",
   "main": "dist/index.js",
   "repository": {
@@ -36,7 +36,8 @@
   "dependencies": {
     "ioredis": "^4.22.0",
     "lodash.isplainobject": "^4.0.6",
-    "lodash.omit": "^4.5.0"
+    "lodash.omit": "^4.5.0",
+    "ts-opaque": "^3.0.1"
   },
   "devDependencies": {
     "@luckbox/eslint-rules": "4.0.4",
@@ -55,7 +56,6 @@
     "jest": "^26.1.0",
     "lint-staged": "^10.2.11",
     "ts-jest": "^26.1.1",
-    "ts-opaque": "^2.2.1",
     "typescript": "^4.1.4"
   }
 }
