--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,11 +9,11 @@
     "strictPropertyInitialization": false,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "removeComments": true,
+    "removeComments": false,
     "resolveJsonModule": true,
     "noImplicitAny": true,
     "outDir": "./dist",
-    "declaration": true,
+    "declaration": true
   },
   "include": [
     "src/index.ts"
