--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@luckbox/ipc-messenger",
   "author": "Luckbox",
-  "version": "1.1.1",
+  "version": "2.0.0",
   "description": "Client for ipc",
   "main": "dist/index.js",
   "repository": {
@@ -34,14 +34,17 @@
   "keywords": [],
   "license": "ISC",
   "dependencies": {
-    "ioredis": "^4.22.0",
+    "@luckbox/http-adapter-factory": "^1.3.1",
+    "@luckbox/logger-factory": "^4.0.0",
+    "amqplib": "^0.10.3",
     "lodash.isplainobject": "^4.0.6",
     "lodash.omit": "^4.5.0",
+    "p-queue": "^6.2.1",
     "ts-opaque": "^3.0.1"
   },
   "devDependencies": {
     "@luckbox/eslint-rules": "4.0.4",
-    "@types/ioredis": "^4.19.3",
+    "@types/amqplib": "^0.10.1",
     "@types/jest": "^26.0.3",
     "@types/lodash.isplainobject": "^4.0.6",
     "@types/lodash.omit": "^4.5.6",
